src/objects/Rule_set__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Workflow Rule</description>
        <inlineHelpText>Enable Workflow Rule</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <inlineHelpText>Object Name</inlineHelpText>
        <label>Object Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Responses</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Rule set</label>
    <nameField>
        <label>Rule set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rule sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>